
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Enhanced provider home page to allow links for newest/most downloaded packages
- Added sorting to Access Policy grid, cleaned up getList processors across site
- Fixed Manager Log page to properly display content, log the right class key, and now display the name of the object edited
- Enhanced Property Sets page to now allow you to edit specific implementations of Property Sets per element, as well as the default set
- Added "disabled" checkbox to Quick Update Plugin
- Fixed bug in modManagerResponse dealing with CMPs and templating paths
- Moved controllers/* files to controllers/default/ to allow for custom manager templating
- Fixed bugs with Property Sets not showing correctly in dropdowns
- Updated xPDO to revision 385 to fix cache_db functionality broken by PHP 5 only changes
- [#MODX-1514] Added css for pointer cursor to top menus
- [#MODX-1513] Added check for SimpleXML to installer
- Add sanity check to make sure languages arent erased on package uninstall
- Removed confirm dialog for remove action on Access Permissions grid
- Fixed panel layout for Access Policies, User Group editing
- Fixed E_STRICT warning on modX::getCacheManager() [method signature did not match xPDO::getCacheManager()]

MODx Revolution 2.0.0-beta-5 (LastChangedRevision: 6224, LastChangedDate: 2009-12-15 10:03:36 -0700 (Tue, 15 Dec 2009))
====================================
- Fixed bug where Set to Default on Resource TV panel was hidden unless you clicked Reload
- Fixed some bugs with Property Sets editing
- Fixed bug where download wasnt working for package management due to missing provider
- Fixed bug where quick create Static Resource wasnt loading MODx.Browser